--- a/public/puente.html
+++ b/public/puente.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Conectando con WhatsApp...</title>
+  <title>Accediendo…</title>
 
-  <!-- ✅ FUENTE MEJORADA -->
+  <!-- 💎 FUENTE MEJORADA -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
 
-  <!-- ✅ META PIXEL CODE -->
+  <!-- 💰 META PIXEL -->
   <script>
     !function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
     n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
@@ -18,104 +18,72 @@
     fbq('init', '1368705578011910'); 
     fbq('track', 'PageView');
   </script>
-  <!-- ❗ FIN META PIXEL CODE -->
 
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
+    * { margin:0; padding:0; box-sizing:border-box; }
 
-    body {
-      height: 100vh;
-      background: radial-gradient(circle at 20% 20%, #2a004d, #000000 90%);
-      overflow: hidden;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      flex-direction: column;
-      color: white;
-      font-family: "Montserrat", sans-serif;
-      text-align: center;
-      position: relative;
-      animation: bgMove 10s ease-in-out infinite alternate;
+    body{
+      height:100vh;
+      background:radial-gradient(circle at 20% 20%, #2a004d, #000000 90%);
+      overflow:hidden;
+      display:flex;
+      justify-content:center;
+      align-items:center;
+      flex-direction:column;
+      color:white;
+      font-family:"Montserrat", sans-serif;
+      text-align:center;
+      position:relative;
+      animation:bgMove 10s ease-in-out infinite alternate;
     }
 
-    @keyframes bgMove {
-      0% { background-position: 0 0; background-color: #2a004d; }
-      100% { background-position: 100% 100%; background-color: #4b0099; }
+    @keyframes bgMove{
+      0%{ background-position:0 0; background-color:#2a004d }
+      100%{ background-position:100% 100%; background-color:#4b0099 }
     }
 
-    /* ⭐ PARTICULAS */
-    .particle {
-      position: absolute;
-      background: rgba(177, 124, 255, 0.6);
-      border-radius: 50%;
-      width: 2px;
-      height: 2px;
-      animation: float linear infinite, shimmer 4s ease-in-out infinite;
-      box-shadow: 0 0 6px rgba(177, 124, 255, 0.8);
+    .particle{
+      position:absolute;
+      background:rgba(177,124,255,.6);
+      border-radius:50%;
+      width:2px; height:2px;
+      animation:float linear infinite, shimmer 4s ease-in-out infinite;
+      box-shadow:0 0 6px rgba(177,124,255,.8);
     }
 
-    @keyframes float {
-      from { transform: translateX(0); opacity: 0.3; }
-      to { transform: translateX(100vw); opacity: 0.9; }
+    @keyframes float{ from{transform:translateX(0);opacity:.3} to{transform:translateX(100vw);opacity:.9} }
+    @keyframes shimmer{ 0%,100%{opacity:.2} 50%{opacity:.9} }
+
+    .content{
+      z-index:2;
+      display:flex;
+      flex-direction:column;
+      align-items:center;
+      max-width:360px;
+      padding:24px;
     }
 
-    @keyframes shimmer {
-      0%,100% { opacity: 0.2; }
-      50% { opacity: 0.9; }
+    .slot-img{
+      max-width:240px;
+      width:70vw;
+      margin-bottom:22px;
+      filter:drop-shadow(0 0 28px rgba(177,124,255,.9));
     }
 
-    .content {
-      position: relative;
-      z-index: 2;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      padding: 24px;
-      max-width: 360px;
+    h1{
+      font-size:1.5rem;
+      font-weight:700;
+      margin-bottom:6px;
+      text-shadow:0 0 10px rgba(177,124,255,.9);
     }
 
-    /* 🟣 IMAGEN */
-    .slot-img {
-      max-width: 240px;
-      width: 70vw;
-      margin-bottom: 18px;
-      filter: drop-shadow(0 0 30px rgba(177, 124, 255, 0.9));
+    .subtitle{
+      font-size:1rem;
+      opacity:.95;
+      margin-bottom:20px;
+      font-weight:500;
     }
 
-    /* 🔄 LOADER */
-    .loader {
-      border: 6px solid rgba(255, 255, 255, 0.1);
-      border-top: 6px solid #b17cff;
-      border-radius: 50%;
-      width: 70px;
-      height: 70px;
-      animation: spin 1.4s linear infinite;
-      margin-bottom: 12px;
-      box-shadow: 0 0 25px rgba(177, 124, 255, 0.6);
-    }
-
-    @keyframes spin {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
-
-    /* 📝 TEXTO */
-    h2 {
-      font-size: 1.5rem;
-      font-weight: 700;
-      margin-bottom: 5px;
-      text-shadow: 0 0 10px rgba(177, 124, 255, 0.8);
-    }
-
-    .subtitle {
-      font-size: 1rem;
-      font-weight: 500;
-      margin-bottom: 18px;
-      opacity: 0.95;
-    }
-
-    /* 🟢 BOTÓN */
     .cta-btn{
       border:none;
       cursor:pointer;
@@ -123,54 +91,41 @@
       border-radius:50px;
       font-size:1rem;
       font-weight:700;
-      letter-spacing:0.04em;
-      text-transform:uppercase;
       display:flex;
-      align-items:center;
       gap:10px;
-      background:linear-gradient(135deg, #3aff97, #17c45b);
+      align-items:center;
+      background:linear-gradient(135deg,#3aff97,#17c45b);
       color:#020617;
-      box-shadow:0 0 26px rgba(34, 197, 94, 0.9);
+      box-shadow:0 0 26px rgba(34,197,94,.9);
       animation:pulse 1.4s infinite ease-in-out;
-      transition:0.2s ease-in-out;
     }
 
     @keyframes pulse{
-      0% { transform:scale(1); }
-      50%{ transform:scale(1.07); }
-      100% { transform:scale(1); }
+      0%{transform:scale(1)}
+      50%{transform:scale(1.07)}
+      100%{transform:scale(1)}
     }
 
-    .helper {
-      font-size: 0.8rem;
-      opacity: .7;
-      margin-top: 12px;
+    .helper{
+      font-size:.82rem;
+      opacity:.75;
+      margin-top:14px;
     }
   </style>
 </head>
 
 <body>
 
-  <!-- 🔹 Pixel sin JS -->
-  <noscript>
-    <img height="1" width="1" style="display:none"
-         src="https://www.facebook.com/tr?id=1368705578011910&ev=PageView&noscript=1"/>
-  </noscript>
-
   <div class="content">
 
-    <!-- 🎰 TU IMAGEN -->
     <img src="logo-home.png" class="slot-img" alt="Insomnia Slot">
 
-    <div class="loader"></div>
-
-    <h2>Conectando con WhatsApp...</h2>
+    <h1>CREÁ TU USUARIO EN SEGUNDOS</h1>
 
     <p class="subtitle">
-      Creá tu usuario en segundos y empezá a jugar con ventaja
+      Y empezá a jugar con ventaja ahora mismo
     </p>
 
-    <!-- 🟢 BOTON CON SVG -->
     <button class="cta-btn" id="cta-btn">
       <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" viewBox="0 0 24 24">
         <path d="M19.05 4.91A9.8 9.8 0 0 0 12.04 2C6.51 2 2 6.51 2 12.04c0 1.93.53 3.81 1.52 5.46L2 22l4.62-1.51a10 10 0 0 0 5.42 1.55h.02c5.53 0 10.04-4.51 10.04-10.04 0-2.67-1.04-5.18-2.95-7.09ZM12.06 20c-1.71 0-3.38-.46-4.84-1.33l-.35-.2-2.74.9.9-2.67-.22-.35a8.05 8.05 0 1 1 7.25 4.65Zm4.52-5.99c-.25-.13-1.47-.72-1.7-.8-.23-.08-.4-.13-.57.14-.17.25-.65.8-.8.96-.15.17-.3.18-.55.06-.25-.13-1.06-.39-2.03-1.24-.75-.67-1.25-1.49-1.4-1.73-.15-.25-.02-.38.11-.5.12-.12.25-.3.38-.45.13-.15.17-.25.25-.42.08-.17.04-.32-.02-.45-.06-.13-.57-1.37-.78-1.88-.2-.48-.4-.42-.57-.43l-.48-.01c-.17 0-.45.06-.69.32-.23.25-.9.88-.9 2.14 0 1.26.93 2.48 1.06 2.65.13.17 1.81 2.77 4.47 3.89 2.66 1.12 2.66.75 3.14.7.48-.04 1.47-.6 1.68-1.18.21-.57.21-1.06.15-1.18-.06-.13-.23-.2-.48-.33Z"/>
@@ -178,39 +133,40 @@
       CREAR USUARIO
     </button>
 
-    <p class="helper">Si no se abre solo, tocá el botón 👇</p>
+    <p class="helper">
+      Si no se abre automáticamente, presioná el botón
+    </p>
 
   </div>
+
+  <noscript><img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1368705578011910&ev=PageView&noscript=1"/></noscript>
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
 
-      /* 🌌 PARTICULAS */
-      for (let i = 0; i < 80; i++) {
-        const p = document.createElement("div");
+      for (let i=0;i<80;i++){
+        const p=document.createElement("div");
         p.classList.add("particle");
-        p.style.top = Math.random()*100 + "vh";
-        p.style.left = Math.random()*100 + "vw";
-        p.style.animationDuration = (6+Math.random()*8) + "s";
+        p.style.top=Math.random()*100+"vh";
+        p.style.left=Math.random()*100+"vw";
+        p.style.animationDuration=(6+Math.random()*8)+"s";
         document.body.appendChild(p);
       }
 
-      let redirected = false;
+      let redirected=false;
 
       function goToWhatsapp(){
-        if (redirected) return;
-        redirected = true;
+        if(redirected) return;
+        redirected=true;
 
-        if (window.fbq) fbq('trackCustom','WAclick');
+        if(window.fbq) fbq("trackCustom","WAclick");
 
-        setTimeout(() => {
-          window.location.href = "/api/r"; 
-        }, 300);
+        setTimeout(()=>{ window.location.href="/api/r"; },300);
       }
 
       document.getElementById("cta-btn").addEventListener("click", goToWhatsapp);
 
-      /* ⏱️ AUTORREDIRECCIÓN A 7s */
       setTimeout(goToWhatsapp, 7000);
     });
   </script>
