--- a/public/puente.html
+++ b/public/puente.html
@@ -59,29 +59,39 @@
       display:flex;
       flex-direction:column;
       align-items:center;
-      max-width:360px;
+      max-width:380px;
       padding:24px;
     }
 
     .slot-img{
-      max-width:240px;
-      width:70vw;
-      margin-bottom:22px;
-      filter:drop-shadow(0 0 28px rgba(177,124,255,.9));
+      max-width:300px;
+      width:80vw;
+      margin-bottom:24px;
+      filter:drop-shadow(0 0 32px rgba(177,124,255,.95));
     }
 
     h1{
       font-size:1.5rem;
       font-weight:700;
-      margin-bottom:6px;
+      margin-bottom:8px;
       text-shadow:0 0 10px rgba(177,124,255,.9);
+      line-height:1.2;
+    }
+
+    .h1-line-small{
+      display:block;
+      font-size:1.1rem;
+      font-weight:600;
+      opacity:.95;
+      margin-top:2px;
     }
 
     .subtitle{
-      font-size:1rem;
+      font-size:0.95rem;
       opacity:.95;
       margin-bottom:20px;
       font-weight:500;
+      white-space:nowrap;
     }
 
     .cta-btn{
@@ -120,10 +130,13 @@
 
     <img src="logo-home.png" class="slot-img" alt="Insomnia Slot">
 
-    <h1>CREÁ TU USUARIO EN SEGUNDOS</h1>
+    <h1>
+      CREÁ TU USUARIO
+      <span class="h1-line-small">EN SEGUNDOS</span>
+    </h1>
 
     <p class="subtitle">
-      Y empezá a jugar con ventaja ahora mismo
+      Y empezá a jugar con ventaja ahora mismo 🎰💸
     </p>
 
     <button class="cta-btn" id="cta-btn">
