--- a/public/puente.html
+++ b/public/puente.html
@@ -6,7 +6,7 @@
   <title>Accediendo…</title>
 
   <!-- 💎 FUENTE MEJORADA -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
 
   <!-- 💰 META PIXEL -->
   <script>
@@ -44,52 +44,124 @@
 
     .particle{
       position:absolute;
-      background:rgba(177,124,255,.6);
+      background:rgba(177,124,255,.5);
       border-radius:50%;
       width:2px; height:2px;
       animation:float linear infinite, shimmer 4s ease-in-out infinite;
       box-shadow:0 0 6px rgba(177,124,255,.8);
     }
 
-    @keyframes float{ from{transform:translateX(0);opacity:.3} to{transform:translateX(100vw);opacity:.9} }
+    @keyframes float{ from{transform:translateX(0);opacity:.25} to{transform:translateX(100vw);opacity:.9} }
     @keyframes shimmer{ 0%,100%{opacity:.2} 50%{opacity:.9} }
 
-    .content{
+    /* 🎴 TARJETA CENTRAL */
+    .card-wrapper{
       z-index:2;
+      padding:20px;
+      width:100%;
+      display:flex;
+      justify-content:center;
+    }
+
+    .card{
+      position:relative;
+      max-width:380px;
+      width:100%;
+      padding:22px 20px 20px;
+      border-radius:20px;
+      background:rgba(9, 9, 22, 0.82);
+      box-shadow:0 0 32px rgba(0,0,0,.7);
+      backdrop-filter:blur(16px);
+      -webkit-backdrop-filter:blur(16px);
+      overflow:hidden;
+    }
+
+    .card::before{
+      content:"";
+      position:absolute;
+      inset:0;
+      border-radius:20px;
+      padding:1px;
+      background:linear-gradient(135deg, rgba(177,124,255,.9), rgba(56,189,248,.7));
+      -webkit-mask:
+        linear-gradient(#000 0 0) content-box,
+        linear-gradient(#000 0 0);
+      -webkit-mask-composite:xor;
+      mask-composite:exclude;
+      opacity:.7;
+    }
+
+    .card-inner{
+      position:relative;
+      z-index:1;
       display:flex;
       flex-direction:column;
       align-items:center;
-      max-width:380px;
-      padding:24px 20px;
+    }
+
+    /* 🪪 FILA SUPERIOR: MARCA + SELLO */
+    .badge-row{
+      width:100%;
+      display:flex;
+      align-items:center;
+      justify-content:space-between;
+      margin-bottom:10px;
+    }
+
+    .brand{
+      font-size:0.72rem;
+      letter-spacing:0.22em;
+      text-transform:uppercase;
+      opacity:.75;
+    }
+
+    .pill{
+      font-size:0.7rem;
+      padding:4px 10px;
+      border-radius:999px;
+      background:rgba(34,197,94,.12);
+      border:1px solid rgba(34,197,94,.45);
+      color:#bbf7d0;
+      display:flex;
+      align-items:center;
+      gap:6px;
+      white-space:nowrap;
+    }
+
+    .pill-dot{
+      width:7px; height:7px;
+      border-radius:50%;
+      background:#22c55e;
+      box-shadow:0 0 8px rgba(34,197,94,1);
     }
 
     .slot-img{
-      max-width:300px;
-      width:80vw;
-      margin-bottom:24px;
+      max-width:290px;
+      width:78vw;
+      margin:4px 0 22px;
       filter:drop-shadow(0 0 32px rgba(177,124,255,.95));
     }
 
     h1{
-      font-size:1.5rem;
+      font-size:1.45rem;
       font-weight:700;
-      margin-bottom:8px;
+      margin-bottom:6px;
       text-shadow:0 0 10px rgba(177,124,255,.9);
       line-height:1.2;
     }
 
     .h1-line-small{
       display:block;
-      font-size:1.1rem;
+      font-size:1.05rem;
       font-weight:600;
-      opacity:.95;
+      opacity:.96;
       margin-top:2px;
     }
 
     .subtitle{
-      font-size:0.95rem;
-      opacity:.95;
-      margin-bottom:20px;
+      font-size:0.9rem;
+      opacity:.96;
+      margin-bottom:18px;
       font-weight:500;
       white-space:nowrap;
     }
@@ -99,56 +171,79 @@
       cursor:pointer;
       padding:15px 26px;
       border-radius:50px;
-      font-size:1rem;
+      font-size:0.98rem;
       font-weight:700;
       display:flex;
       gap:10px;
       align-items:center;
       background:linear-gradient(135deg,#3aff97,#17c45b);
       color:#020617;
-      box-shadow:0 0 26px rgba(34,197,94,.9);
+      box-shadow:0 0 22px rgba(34,197,94,.9);
       animation:pulse 1.4s infinite ease-in-out;
+      letter-spacing:0.04em;
     }
 
     @keyframes pulse{
       0%{transform:scale(1)}
-      50%{transform:scale(1.07)}
+      50%{transform:scale(1.05)}
       100%{transform:scale(1)}
     }
 
     .helper{
-      font-size:.82rem;
-      opacity:.75;
-      margin-top:14px;
+      font-size:.78rem;
+      opacity:.72;
+      margin-top:12px;
     }
 
-    /* 📱 Ajustes para celular: contenido más arriba y un poco más compacto */
-    @media (max-width: 768px){
+    .trust-row{
+      margin-top:10px;
+      display:flex;
+      gap:10px;
+      justify-content:center;
+      flex-wrap:wrap;
+    }
+
+    .trust-chip{
+      font-size:0.72rem;
+      padding:4px 8px;
+      border-radius:999px;
+      background:rgba(15,23,42,.85);
+      border:1px solid rgba(148,163,184,.35);
+      opacity:.9;
+    }
+
+    /* 📱 Mobile tweaks */
+    @media (max-width:768px){
       body{
         justify-content:flex-start;
-        padding-top:32px;
+        padding-top:24px;
       }
 
-      .content{
+      .card{
         max-width:340px;
+        padding:18px 16px 18px;
       }
 
       .slot-img{
         max-width:260px;
-        margin-bottom:20px;
+        margin-bottom:18px;
       }
 
       h1{
-        font-size:1.4rem;
+        font-size:1.35rem;
       }
 
       .h1-line-small{
-        font-size:1rem;
+        font-size:0.98rem;
       }
 
       .subtitle{
-        font-size:0.9rem;
-        white-space:normal; /* por si algún celu MUY chico corta la línea */
+        font-size:0.88rem;
+        white-space:normal;
+      }
+
+      .trust-row{
+        margin-top:8px;
       }
     }
   </style>
@@ -156,30 +251,52 @@
 
 <body>
 
-  <div class="content">
+  <div class="card-wrapper">
+    <div class="card">
+      <div class="card-inner">
 
-    <img src="logo-home.png" class="slot-img" alt="Insomnia Slot">
+        <!-- 🪪 MARCA + SELLO ACCESO OFICIAL -->
+        <div class="badge-row">
+          <span class="brand">INSOMNIA</span>
+          <span class="pill">
+            <span class="pill-dot"></span>
+            Acceso oficial
+          </span>
+        </div>
 
-    <h1>
-      CREÁ TU USUARIO
-      <span class="h1-line-small">EN SEGUNDOS</span>
-    </h1>
+        <!-- 🎰 LOGO / MÁQUINA -->
+        <img src="logo-home.png" class="slot-img" alt="Insomnia Slot">
 
-    <p class="subtitle">
-      Y empezá a jugar con ventaja ahora mismo 🎰💸
-    </p>
+        <!-- TITULAR -->
+        <h1>
+          CREÁ TU USUARIO
+          <span class="h1-line-small">EN SEGUNDOS</span>
+        </h1>
 
-    <button class="cta-btn" id="cta-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" viewBox="0 0 24 24">
-        <path d="M19.05 4.91A9.8 9.8 0 0 0 12.04 2C6.51 2 2 6.51 2 12.04c0 1.93.53 3.81 1.52 5.46L2 22l4.62-1.51a10 10 0 0 0 5.42 1.55h.02c5.53 0 10.04-4.51 10.04-10.04 0-2.67-1.04-5.18-2.95-7.09ZM12.06 20c-1.71 0-3.38-.46-4.84-1.33l-.35-.2-2.74.9.9-2.67-.22-.35a8.05 8.05 0 1 1 7.25 4.65Zm4.52-5.99c-.25-.13-1.47-.72-1.7-.8-.23-.08-.4-.13-.57.14-.17.25-.65.8-.8.96-.15.17-.3.18-.55.06-.25-.13-1.06-.39-2.03-1.24-.75-.67-1.25-1.49-1.4-1.73-.15-.25-.02-.38.11-.5.12-.12.25-.3.38-.45.13-.15.17-.25.25-.42.08-.17.04-.32-.02-.45-.06-.13-.57-1.37-.78-1.88-.2-.48-.4-.42-.57-.43l-.48-.01c-.17 0-.45.06-.69.32-.23.25-.9.88-.9 2.14 0 1.26.93 2.48 1.06 2.65.13.17 1.81 2.77 4.47 3.89 2.66 1.12 2.66.75 3.14.7.48-.04 1.47-.6 1.68-1.18.21-.57.21-1.06.15-1.18-.06-.13-.23-.2-.48-.33Z"/>
-      </svg>
-      CREAR USUARIO
-    </button>
+        <p class="subtitle">
+          Y empezá a jugar con ventaja ahora mismo 🎰💸
+        </p>
 
-    <p class="helper">
-      Si no se abre automáticamente, presioná el botón
-    </p>
+        <!-- BOTÓN PRINCIPAL -->
+        <button class="cta-btn" id="cta-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" viewBox="0 0 24 24">
+            <path d="M19.05 4.91A9.8 9.8 0 0 0 12.04 2C6.51 2 2 6.51 2 12.04c0 1.93.53 3.81 1.52 5.46L2 22l4.62-1.51a10 10 0 0 0 5.42 1.55h.02c5.53 0 10.04-4.51 10.04-10.04 0-2.67-1.04-5.18-2.95-7.09ZM12.06 20c-1.71 0-3.38-.46-4.84-1.33l-.35-.2-2.74.9.9-2.67-.22-.35a8.05 8.05 0 1 1 7.25 4.65Zm4.52-5.99c-.25-.13-1.47-.72-1.7-.8-.23-.08-.4-.13-.57.14-.17.25-.65.8-.8.96-.15.17-.3.18-.55.06-.25-.13-1.06-.39-2.03-1.24-.75-.67-1.25-1.49-1.4-1.73-.15-.25-.02-.38.11-.5.12-.12.25-.3.38-.45.13-.15.17-.25.25-.42.08-.17.04-.32-.02-.45-.06-.13-.57-1.37-.78-1.88-.2-.48-.4-.42-.57-.43l-.48-.01c-.17 0-.45.06-.69.32-.23.25-.9.88-.9 2.14 0 1.26.93 2.48 1.06 2.65.13.17 1.81 2.77 4.47 3.89 2.66 1.12 2.66.75 3.14.7.48-.04 1.47-.6 1.68-1.18.21-.57.21-1.06.15-1.18-.06-.13-.23-.2-.48-.33Z"/>
+          </svg>
+          CREAR USUARIO
+        </button>
 
+        <p class="helper">
+          Si no se abre automáticamente, presioná el botón
+        </p>
+
+        <!-- PUNTOS DE CONFIANZA -->
+        <div class="trust-row">
+          <div class="trust-chip">Atención 24/7</div>
+          <div class="trust-chip">Cargas y retiros ágiles</div>
+        </div>
+
+      </div>
+    </div>
   </div>
 
   <noscript><img height="1" width="1" style="display:none"
@@ -188,7 +305,8 @@
   <script>
     document.addEventListener("DOMContentLoaded", () => {
 
-      for (let i=0;i<80;i++){
+      // Partículas
+      for (let i=0;i<70;i++){
         const p=document.createElement("div");
         p.classList.add("particle");
         p.style.top=Math.random()*100+"vh";
