--- a/public/puente.html
+++ b/public/puente.html
@@ -54,7 +54,6 @@
     @keyframes float{ from{transform:translateX(0);opacity:.25} to{transform:translateX(100vw);opacity:.9} }
     @keyframes shimmer{ 0%,100%{opacity:.2} 50%{opacity:.9} }
 
-    /* 🎴 TARJETA CENTRAL */
     .card-wrapper{
       z-index:2;
       padding:20px;
@@ -99,7 +98,6 @@
       align-items:center;
     }
 
-    /* 🪪 FILA SUPERIOR: MARCA + SELLO */
     .badge-row{
       width:100%;
       display:flex;
@@ -195,24 +193,6 @@
       margin-top:12px;
     }
 
-    .trust-row{
-      margin-top:10px;
-      display:flex;
-      gap:10px;
-      justify-content:center;
-      flex-wrap:wrap;
-    }
-
-    .trust-chip{
-      font-size:0.72rem;
-      padding:4px 8px;
-      border-radius:999px;
-      background:rgba(15,23,42,.85);
-      border:1px solid rgba(148,163,184,.35);
-      opacity:.9;
-    }
-
-    /* 📱 Mobile tweaks */
     @media (max-width:768px){
       body{
         justify-content:flex-start;
@@ -228,23 +208,6 @@
         max-width:260px;
         margin-bottom:18px;
       }
-
-      h1{
-        font-size:1.35rem;
-      }
-
-      .h1-line-small{
-        font-size:0.98rem;
-      }
-
-      .subtitle{
-        font-size:0.88rem;
-        white-space:normal;
-      }
-
-      .trust-row{
-        margin-top:8px;
-      }
     }
   </style>
 </head>
@@ -255,7 +218,6 @@
     <div class="card">
       <div class="card-inner">
 
-        <!-- 🪪 MARCA + SELLO ACCESO OFICIAL -->
         <div class="badge-row">
           <span class="brand">INSOMNIA</span>
           <span class="pill">
@@ -264,10 +226,8 @@
           </span>
         </div>
 
-        <!-- 🎰 LOGO / MÁQUINA -->
         <img src="logo-home.png" class="slot-img" alt="Insomnia Slot">
 
-        <!-- TITULAR -->
         <h1>
           CREÁ TU USUARIO
           <span class="h1-line-small">EN SEGUNDOS</span>
@@ -277,7 +237,6 @@
           Y empezá a jugar con ventaja ahora mismo 🎰💸
         </p>
 
-        <!-- BOTÓN PRINCIPAL -->
         <button class="cta-btn" id="cta-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="22" height="22" fill="white" viewBox="0 0 24 24">
             <path d="M19.05 4.91A9.8 9.8 0 0 0 12.04 2C6.51 2 2 6.51 2 12.04c0 1.93.53 3.81 1.52 5.46L2 22l4.62-1.51a10 10 0 0 0 5.42 1.55h.02c5.53 0 10.04-4.51 10.04-10.04 0-2.67-1.04-5.18-2.95-7.09ZM12.06 20c-1.71 0-3.38-.46-4.84-1.33l-.35-.2-2.74.9.9-2.67-.22-.35a8.05 8.05 0 1 1 7.25 4.65Zm4.52-5.99c-.25-.13-1.47-.72-1.7-.8-.23-.08-.4-.13-.57.14-.17.25-.65.8-.8.96-.15.17-.3.18-.55.06-.25-.13-1.06-.39-2.03-1.24-.75-.67-1.25-1.49-1.4-1.73-.15-.25-.02-.38.11-.5.12-.12.25-.3.38-.45.13-.15.17-.25.25-.42.08-.17.04-.32-.02-.45-.06-.13-.57-1.37-.78-1.88-.2-.48-.4-.42-.57-.43l-.48-.01c-.17 0-.45.06-.69.32-.23.25-.9.88-.9 2.14 0 1.26.93 2.48 1.06 2.65.13.17 1.81 2.77 4.47 3.89 2.66 1.12 2.66.75 3.14.7.48-.04 1.47-.6 1.68-1.18.21-.57.21-1.06.15-1.18-.06-.13-.23-.2-.48-.33Z"/>
@@ -289,47 +248,39 @@
           Si no se abre automáticamente, presioná el botón
         </p>
 
-        <!-- PUNTOS DE CONFIANZA -->
-        <div class="trust-row">
-          <div class="trust-chip">Atención 24/7</div>
-          <div class="trust-chip">Cargas y retiros ágiles</div>
-        </div>
-
       </div>
     </div>
   </div>
 
-  <noscript><img height="1" width="1" style="display:none"
-  src="https://www.facebook.com/tr?id=1368705578011910&ev=PageView&noscript=1"/></noscript>
-
   <script>
-    document.addEventListener("DOMContentLoaded", () => {
+  document.addEventListener("DOMContentLoaded", () => {
 
-      // Partículas
-      for (let i=0;i<70;i++){
-        const p=document.createElement("div");
-        p.classList.add("particle");
-        p.style.top=Math.random()*100+"vh";
-        p.style.left=Math.random()*100+"vw";
-        p.style.animationDuration=(6+Math.random()*8)+"s";
-        document.body.appendChild(p);
-      }
+    for (let i=0;i<70;i++){
+      const p=document.createElement("div");
+      p.classList.add("particle");
+      p.style.top=Math.random()*100+"vh";
+      p.style.left=Math.random()*100+"vw";
+      p.style.animationDuration=(6+Math.random()*8)+"s";
+      document.body.appendChild(p);
+    }
 
-      let redirected=false;
+    let redirected=false;
 
-      function goToWhatsapp(){
-        if(redirected) return;
-        redirected=true;
+    function goToWhatsapp(){
+      if(redirected) return;
+      redirected=true;
 
-        if(window.fbq) fbq("trackCustom","WAclick");
+      if(window.fbq) fbq("trackCustom","WAclick");
 
-        setTimeout(()=>{ window.location.href="/api/r"; },300);
-      }
+      setTimeout(()=>{ window.location.href="/api/r"; },300);
+    }
 
-      document.getElementById("cta-btn").addEventListener("click", goToWhatsapp);
-
-      setTimeout(goToWhatsapp, 7000);
+    document.addEventListener("click", e=>{
+      if(e.target.closest("#cta-btn")) goToWhatsapp();
     });
+
+    setTimeout(goToWhatsapp, 7000);
+  });
   </script>
 </body>
 </html>
