--- a/public/puente.html
+++ b/public/puente.html
@@ -157,11 +157,12 @@
     }
 
     .subtitle{
-      font-size:0.9rem;
+      font-size:0.78rem;
       opacity:.96;
-      margin-bottom:18px;
+      margin-bottom:16px;
       font-weight:500;
       white-space:nowrap;
+      transform: translateY(-2px);
     }
 
     .cta-btn{
@@ -169,7 +170,7 @@
       cursor:pointer;
       padding:15px 26px;
       border-radius:50px;
-      font-size:0.98rem;
+      font-size:0.95rem;
       font-weight:700;
       display:flex;
       gap:10px;
@@ -199,14 +200,14 @@
         padding-top:24px;
       }
 
-      .card{
-        max-width:340px;
-        padding:18px 16px 18px;
+      .subtitle{
+        font-size:0.72rem;
+        line-height:1.1;
+        white-space:normal;
       }
 
       .slot-img{
-        max-width:260px;
-        margin-bottom:18px;
+        max-width:250px;
       }
     }
   </style>
@@ -234,7 +235,7 @@
         </h1>
 
         <p class="subtitle">
-          Y empezá a jugar con ventaja ahora mismo 🎰💸
+          Y empezá a jugar con ventaja ahora mismo 🎰💵
         </p>
 
         <button class="cta-btn" id="cta-btn">
