--- a/public/puente.html
+++ b/public/puente.html
@@ -194,6 +194,16 @@
       margin-top:12px;
     }
 
+    .footnote{
+      font-size:0.72rem;
+      opacity:0.48;
+      text-align:center;
+      width:100%;
+      margin-top:6px;
+      letter-spacing:0.04em;
+      white-space:nowrap;
+    }
+
     @media (max-width:768px){
       body{
         justify-content:flex-start;
@@ -252,6 +262,10 @@
       </div>
     </div>
   </div>
+
+  <footer class="footnote">
+    © GERENCIA INSOMNIA – Todos los derechos reservados
+  </footer>
 
   <script>
   document.addEventListener("DOMContentLoaded", () => {
